<resources>
    <string name="app_name">Synaera</string>
    <!--    <string name="take_photo">Take Photo</string>-->
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="info_button">Info Button</string>
    <string name="mute">Mute</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position_tip">Tip: Position yourself according to this outline</string>
</resources>